Small bugfixes and documentation.

--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <DocumentationFile>../XmlDocs/DataAccess.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
