Feature complete, untested and not run

--- a/EncodeJobOverseer/global.config
+++ b/EncodeJobOverseer/global.config
@@ -11,6 +11,7 @@
     <ProcessedBucket path="" />
     <ActiveBucket path="" />
     <CompletedBucket path="" />
+    <FailedBucket path="" />
     <LogFile path="" />
   </Running>
   <Defaults>
@@ -18,6 +19,7 @@
     <ProcessedBucket path="" />
     <ActiveBucket path="" />
     <CompletedBucket path="" />
+    <FailedBucket path="" />
     <LogFile path="" />
   </Defaults>
   </configuration>
