Features fully integrated Tests all passed Integrated test run successful Removal of deprecated test encoder No unreachable code (except in executer class) Documentation of Logic and DA layers up to date

--- a/EncodeJobOverseer/global.config
+++ b/EncodeJobOverseer/global.config
@@ -15,7 +15,7 @@
     <LogFile path="" />
   </Running>
   <Defaults>
-    <MaxJobs nums="" />
+    <MaxJobs num="" />
     <ProcessedBucket path="" />
     <ActiveBucket path="" />
     <CompletedBucket path="" />
