Removed SvtTestSuite from sln

--- a/SvtTestSuite/SvtTestSuite.csproj
+++ b/SvtTestSuite/SvtTestSuite.csproj
@@ -5,12 +5,6 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     <PublishSingleFile>true</PublishSingleFile>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
-
-    <ItemGroup>
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
-    <ProjectReference Include="..\DataObjects\DataObjects.csproj" />
-  </ItemGroup>
-
 </Project>
