Pre-integration test commit Config has been updated to its own project and a single file Tests all pass with gold stars Logic layer is very clean, file system independent

--- a/AppConfig/default.config
+++ b/AppConfig/default.config
@@ -1,17 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <Startup>
-    <Application type="ingester" />
+  <Local>
     <DbConnection type="mock" string="" />
-  </Startup>
-  <Running>
-    <InputBucket path="" />
+    <MaxJobs num="" />
     <ProcessedBucket path="" />
+    <ActiveBucket path="" />
+    <CompletedBucket path="" />
+    <FailedBucket path="" />
     <LogFile path="" />
-  </Running>
-  <Defaults>
     <InputBucket path="" />
-    <ProcessedBucket path="" />
-    <LogFile path="" />
-  </Defaults>
+    <FailedBucket path="" />
+  </Local>
 </configuration>
