--- a/TestLayer/TestLayer.csproj
+++ b/TestLayer/TestLayer.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataObjects\DataObjects.csproj" />
     <ProjectReference Include="..\AppLogic\AppLogic.csproj" />
+    <ProjectReference Include="..\AppConfig\AppConfig.csproj" />
   </ItemGroup>
   
 </Project>
