Better config, combiner works Added a couple helpful properties to config, for polling interval and default encoder. Also finished and tested output combiner.

--- a/AppConfig/default.config
+++ b/AppConfig/default.config
@@ -10,5 +10,7 @@
     <LogFile path="" />
     <InputBucket path="" />
     <FailedBucket path="" />
+    <DefaultEncoder type="" />
+    <IntervalTime seconds="" />
   </Local>
 </configuration>
