Paths added to config, scene changes Accessing scene time stamps from very long videos was unstable, has been fixed. Ffmpeg, ffprobe, pts script paths added.

--- a/AppConfig/default.config
+++ b/AppConfig/default.config
@@ -12,5 +12,8 @@
     <FailedBucket path="" />
     <DefaultEncoder type="" />
     <IntervalTime seconds="" />
+    <Ffprobe path="" />
+    <Ffmpeg path="" />
+    <PtsScript path="" />
   </Local>
 </configuration>
